--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "fs": "^0.0.1-security",
     "i": "^0.3.7",
     "lucide-react": "^0.314.0",
+    "moment": "^2.29.4",
     "next": "^14.2.0",
     "npm": "^10.4.0",
     "qs": "^6.11.2",
@@ -36,8 +37,7 @@
     "sass": "^1.69.5",
     "sharp": "^0.33.3",
     "swiper": "^11.0.5",
-    "tailwind-merge": "^2.2.1",
-    "moment": "^2.29.4"
+    "tailwind-merge": "^2.3.0"
   },
   "devDependencies": {
     "@svgr/webpack": "^8.1.0",
