Added next top loader

--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "lucide-react": "^0.314.0",
     "moment": "^2.29.4",
     "next": "^14.2.0",
+    "nextjs-toploader": "^1.6.12",
     "npm": "^10.4.0",
     "qs": "^6.11.2",
     "react": "^18.2.0",
